KB-12296 implemented missing code for notification when course will be retired